using Azure function

--- a/src/app/room-search/room-search.component.html
+++ b/src/app/room-search/room-search.component.html
@@ -39,7 +39,10 @@
     <footer class="flex-container">
         <ng-template #elseBlock>
         <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, eos obcaecati. Corporis voluptatum quibusdam laboriosam optio blanditiis itaque expedita fugiat repellendus sit commodi? Inventore ipsa, odio officia iste cumque eum.
+            * This is a MVP (Minimally Viable Product) WebApp created using Angular. 
+            It is not a real hotel website and was created<br /> for demonstration purposes. 
+            It is modeled after a project featured in Tim Corey's C# Mastercourse https://www.csharpmastercourse.com/.
+            Please use responsibly.
         </p>
     </ng-template>
         <p style="color: rgb(161, 0, 0);background:rgb(39, 39, 39)" *ngIf="isError;else elseBlock">Error: There was a problem contacting the server.</p>
